# nix-rage

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  flake.nix  plugin.cpp
.github/workflows/: main.yml
src/: lib.rs
