[package]
name = "nix-rage"
version = "0.1.1"
description = "Hide personal data with Nix"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/renesat/nix-rage"

[lib]
crate-type = ["cdylib"]

[dependencies]
age = { version = "0.11", features = ["armor", "plugin", "ssh"] }
anyhow = "1.0"
sha256 = "1.5.0"
tempfile = "3.15.0"
users = "0.11.0"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
regex = "1.0"
anyhow = "1.0"
